# Bergens-konvertering

./: .gitignore  README.MD  bergens_kolonner_med_verdi.py  dubletter.ipynb  etterkonvertering.ipynb  find_fuzzy_duplicates.py  hentOgVaskData.py  konvertering.ipynb  personSamenkoplinger.ipynb  pyproject.toml
