[project]
name = "bergens-konvertering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastexcel>=0.14.0",
    "networkx>=3.5",
    "polars>=1.30.0",
    "thefuzz>=0.22.1",
    "tqdm>=4.67.1",
    "typing>=3.10.0.0",
    "xlsxwriter>=3.2.3",
]
